--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,3 +1,48 @@
+body {
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
+*,
+*::after,
+**::before {
+  box-sizing: border-box;
+}
+
+nav {
+  width: 100vw;
+  height: 13vh;
+}
+nav ul li a {
+  font-weight: 600;
+}
+
+.section-home .container-home-page {
+  background-color: hsl(13, 100%, 72%);
+  height: 90vh;
+  border-bottom-left-radius: 100px;
+  overflow: hidden;
+}
+.section-home .container-home-page .container-text {
+  width: 100%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+.section-home .container-home-page .container-text h1 {
+  font-size: 50px;
+  font-weight: 600;
+}
+.section-home .container-home-page .container-text p {
+  font-size: 17px;
+}
+.section-home .container-items .container-title h1 {
+  font-size: 30px;
+  font-weight: 600;
+  color: hsl(207, 13%, 34%);
+}
 
 /*# sourceMappingURL=main.css.map */
