--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,13 +11,25 @@ body {
   box-sizing: border-box;
 }
 
+.btn-signup-link {
+  background-color: hsl(13, 100%, 72%);
+  font-weight: 600;
+  border-radius: 20px;
+  padding: 5px 10px;
+}
+
 nav {
   width: 100vw;
   height: 13vh;
 }
+nav .container-ul {
+  transition: 0.3s;
+}
 @media only screen and (max-width: 768px) {
   nav .container-ul {
-    display: none;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
   }
 }
 nav .container-ul ul {
@@ -32,6 +44,12 @@ nav .container-ul ul li a {
 }
 nav .container-ul ul li a:hover {
   color: hsl(207, 13%, 34%);
+}
+
+.active-nav {
+  height: fit-content !important;
+  padding: 8% !important;
+  overflow: hidden;
 }
 
 .section-home .container-home-page {
