--- a/src/assets/sass/components/_Navbar.scss
+++ b/src/assets/sass/components/_Navbar.scss
@@ -5,8 +5,12 @@ nav {
   height: 13vh;
 
   .container-ul {
+    transition: 0.3s;
+
     @media only screen and (max-width: 768px) {
-      display: none;
+      height: 0;
+      padding: 0;
+      overflow: hidden;
     }
 
     ul {
@@ -27,4 +31,10 @@ nav {
       }
     }
   }
+}
+
+.active-nav {
+  height: fit-content !important;
+  padding: 8% !important;
+  overflow: hidden;
 }
