--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -20,10 +20,11 @@
 
       h1 {
         font-size: 50px;
+        padding: 4%;
         font-weight: 600;
 
         @media only screen and (max-width: 768px) {
-          font-size: 45px;
+          font-size: 40px;
         }
       }
 
