--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,16 +14,31 @@ body {
 .btn-signup-link {
   background-color: hsl(13, 100%, 72%);
   font-weight: 600;
-  border-radius: 20px;
-  padding: 5px 10px;
+  border-radius: 30px;
+  padding: 10px 35px;
+  padding-bottom: 13px;
+}
+
+.btn-start-free-home {
+  color: hsl(13, 100%, 72%);
+}
+
+.login-link-btn {
+  font-size: 20px;
+  font-weight: 600;
+  color: hsl(207, 13%, 34%);
 }
 
 nav {
   width: 100vw;
   height: 13vh;
 }
+nav .container-btn-monibe {
+  border-top: 0.1px solid hsl(240, 2%, 79%);
+}
 nav .container-ul {
   transition: 0.3s;
+  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.2);
 }
 @media only screen and (max-width: 768px) {
   nav .container-ul {
