--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -3,6 +3,17 @@
 .btn-signup-link {
   background-color: color.$Very-light-red;
   font-weight: 600;
-  border-radius: 20px;
-  padding: 5px 10px;
+  border-radius: 30px;
+  padding: 10px 35px;
+  padding-bottom: 13px;
+}
+
+.btn-start-free-home {
+  color: color.$Very-light-red;
+}
+
+.login-link-btn {
+  font-size: 20px;
+  font-weight: 600;
+  color: color.$Very-dark-grayis-hblue;
 }
