testing new design

--- a/src/assets/sass/base/_color.scss
+++ b/src/assets/sass/base/_color.scss
@@ -7,6 +7,7 @@ $Very-dark-blue: hsl(208, 49%, 24%);
 // Neutral
 
 $White: hsl(0, 0%, 100%);
+$White-two: hsl(0, 0%, 88%);
 $Grayish-blue: hsl(240, 2%, 79%);
 $Very-dark-grayis-hblue: hsl(207, 13%, 34%);
 $Very-dark-black-blue: hsl(240, 10%, 16%);
