--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,28 +17,70 @@ body {
   border-radius: 30px;
   padding: 10px 35px;
   padding-bottom: 13px;
+  cursor: pointer;
+}
+
+.btn-signup-link-desktop {
+  color: hsl(13, 100%, 72%);
+  font-weight: 600;
+  border-radius: 30px;
+  padding: 10px 35px;
+  padding-bottom: 13px;
+  cursor: pointer;
+  transition: 1s;
+}
+.btn-signup-link-desktop:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: hsl(0, 0%, 100%);
 }
 
 .btn-start-free-home {
   color: hsl(13, 100%, 72%);
+  cursor: pointer;
+  transition: 1s;
+}
+.btn-start-free-home:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: hsl(0, 0%, 100%);
 }
 
 .login-link-btn {
   font-size: 20px;
   font-weight: 600;
+  cursor: pointer;
   color: hsl(207, 13%, 34%);
+}
+
+.login-link-btn-desktop {
+  font-size: 20px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.btn-learn-more {
+  cursor: pointer;
+  font-weight: 600;
+  transition: 0.3s;
+}
+.btn-learn-more:hover {
+  color: hsl(13, 100%, 72%);
 }
 
 nav {
   width: 100vw;
   height: 13vh;
 }
-nav .container-btn-monibe {
+nav .container-btn-mobile {
   border-top: 0.1px solid hsl(240, 2%, 79%);
 }
 nav .container-ul {
   transition: 0.3s;
-  box-shadow: 15px 15px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 45px 45px 50px rgba(0, 0, 0, 0.3);
+}
+@media only screen and (min-width: 768px) {
+  nav .container-ul {
+    box-shadow: none;
+  }
 }
 @media only screen and (max-width: 768px) {
   nav .container-ul {
@@ -56,9 +98,19 @@ nav .container-ul ul li a {
   transition: 1s;
   display: block;
   width: 100%;
+  color: hsl(0, 0%, 88%);
 }
 nav .container-ul ul li a:hover {
-  color: hsl(207, 13%, 34%);
+  text-decoration: underline;
+  color: hsl(0, 0%, 100%);
+}
+@media only screen and (max-width: 768px) {
+  nav .container-ul ul li a {
+    color: hsl(240, 10%, 16%);
+  }
+  nav .container-ul ul li a:hover {
+    color: hsl(207, 13%, 34%);
+  }
 }
 
 .active-nav {
@@ -87,7 +139,7 @@ nav .container-ul ul li a:hover {
 }
 .section-home .container-home-page .container-text h1 {
   font-size: 50px;
-  padding: 4%;
+  padding: 0 4%;
   font-weight: 600;
 }
 @media only screen and (max-width: 768px) {
@@ -99,9 +151,107 @@ nav .container-ul ul li a:hover {
   font-size: 17px;
 }
 .section-home .container-items .container-title h1 {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 600;
   color: hsl(207, 13%, 34%);
+}
+.section-home .container-items .container-title h3 {
+  font-weight: 600;
+  color: hsl(207, 13%, 34%);
+  font-size: 25px;
+}
+.section-home .container-items- {
+  background-color: hsl(237, 17%, 21%);
+  padding: 4% 20px;
+  overflow: hidden;
+  border-top-right-radius: 100px;
+  border-bottom-left-radius: 100px;
+}
+@media only screen and (min-width: 768px) {
+  .section-home .container-items- {
+    max-height: 55vh;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .section-home .container-items- {
+    padding: 0 5%;
+  }
+}
+.section-home .container-items- .container-padder {
+  height: 100%;
+  width: 100%;
+}
+.section-home .container-items- .container-padder .container-articles-phone {
+  padding: 35px;
+  margin-top: -30%;
+  width: 50%;
+  float: right;
+}
+@media only screen and (max-width: 768px) {
+  .section-home .container-items- .container-padder .container-articles-phone {
+    padding-right: 0;
+    margin-top: 0%;
+    width: 100%;
+    float: none;
+  }
+}
+.section-home .container-items- .container-padder .container-articles-phone .containr-padder {
+  top: 0;
+}
+.section-home .container-items- .container-padder .container-articles-phone .containr-padder h1 {
+  font-size: 30px;
+  font-weight: 600;
+  color: hsl(0, 0%, 100%);
+}
+.section-home .container-items- .container-padder .container-articles-phone .containr-padder p {
+  font-size: 17px;
+  margin-top: 2%;
+  color: hsl(240, 2%, 79%);
+}
+.section-home .container-items- .container-padder .pattern-circle {
+  overflow: hidden;
+  width: 70%;
+  left: 0;
+}
+@media only screen and (min-width: 768px) {
+  .section-home .container-items- .container-padder .pattern-circle {
+    margin-left: -10%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .section-home .container-items- .container-padder .pattern-circle {
+    margin-left: -5%;
+    width: 100% !important;
+    margin-top: -30%;
+    display: flex;
+    justify-content: center;
+  }
+}
+.section-home .container-items- .container-padder .pattern-circle img {
+  margin-top: -50%;
+  width: 100%;
+}
+@media only screen and (max-width: 768px) {
+  .section-home .container-items- .container-padder .pattern-circle img {
+    margin-top: 0%;
+    width: 80%;
+  }
+}
+.section-home .container-items- .container-padder .container-img-phone {
+  position: absolute;
+  left: 0;
+  margin-top: -8%;
+  z-index: 33;
+}
+@media only screen and (max-width: 768px) {
+  .section-home .container-items- .container-padder .container-img-phone {
+    margin-top: -4%;
+    display: flex;
+    justify-items: center;
+  }
+}
+.section-home .container-items- .container-padder .container-img-phone img {
+  width: 80%;
 }
 
 /*# sourceMappingURL=main.css.map */
