--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,6 +19,10 @@ body {
   padding-bottom: 13px;
   cursor: pointer;
 }
+.btn-signup-link:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  color: hsl(0, 0%, 100%);
+}
 
 .btn-signup-link-desktop {
   color: hsl(13, 100%, 72%);
@@ -64,6 +68,7 @@ body {
 }
 .btn-learn-more:hover {
   color: hsl(13, 100%, 72%);
+  background-color: hsl(0, 0%, 100%);
 }
 
 nav {
