--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,16 +12,16 @@ body {
 }
 
 .btn-signup-link {
-  background-color: hsl(13, 100%, 72%);
+  background-color: hsl(353, 100%, 62%);
   font-weight: 600;
   border-radius: 30px;
   padding: 10px 35px;
   padding-bottom: 13px;
   cursor: pointer;
+  transition: 1s;
 }
 .btn-signup-link:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-  color: hsl(0, 0%, 100%);
+  background-color: hsl(13, 100%, 72%);
 }
 
 .btn-signup-link-desktop {
