--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -1,16 +1,16 @@
 @use "../base/color" as color;
 
 .btn-signup-link {
-  background-color: color.$Very-light-red;
+  background-color: color.$Light-red;
   font-weight: 600;
   border-radius: 30px;
   padding: 10px 35px;
   padding-bottom: 13px;
   cursor: pointer;
+  transition: 1s;
 
   &:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    color: color.$White;
+    background-color: color.$Very-light-red;
   }
 }
 
