--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -12,16 +12,16 @@ body {
 }
 
 .btn-signup-link {
-  background-color: hsl(353, 100%, 62%);
+  background: linear-gradient(to right, hsl(13, 100%, 72%), hsl(353, 100%, 62%));
   font-weight: 600;
   border-radius: 30px;
   padding: 10px 35px;
   padding-bottom: 13px;
   cursor: pointer;
-  transition: 1s;
+  transition: background-position 1s ease-in-out;
 }
 .btn-signup-link:hover {
-  background-color: hsl(13, 100%, 72%);
+  background-position: 0 0;
 }
 
 .btn-signup-link-desktop {
