--- a/src/assets/sass/pages/_home.scss
+++ b/src/assets/sass/pages/_home.scss
@@ -140,6 +140,7 @@
           margin-top: -4%;
           display: flex;
           justify-items: center;
+          margin-left: 10%;
         }
 
         img {
