--- a/src/assets/sass/base.scss
+++ b/src/assets/sass/base.scss
@@ -3,5 +3,6 @@
 
 @use "./components/buttons" as button;
 @use "./components/Navbar" as navbar;
+@use "./components/footer" as footer;
 
 @use "./pages/home" as home;
