--- a/src/assets/sass/components/_Navbar.scss
+++ b/src/assets/sass/components/_Navbar.scss
@@ -10,7 +10,7 @@ nav {
 
   .container-ul {
     transition: 0.3s;
-    box-shadow: 45px 45px 50px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 45px 50px rgba(0, 0, 0, 0.3);
 
     @media only screen and (min-width: 768px) {
       box-shadow: none;
@@ -27,6 +27,57 @@ nav {
       width: 100%;
 
       li {
+        position: relative;
+        width: 20%;
+        text-align: center;
+        margin-right: 4px;
+        height: 100%;
+
+        @media only screen and (max-width: 768px) {
+          width: 100%;
+          height: auto;
+        }
+
+        .contaner-ul-dropdown {
+          width: 100%;
+          border-radius: 5px;
+          display: none;
+          width: max-content;
+          position: absolute;
+          width: 100%;
+          transition: 1s;
+
+          @media only screen and (min-width: 769px) {
+            margin-top: 0;
+          }
+
+          @media only screen and (max-width: 768px) {
+            position: static;
+            width: 100%;
+          }
+
+          .container-ul-dropdown-padder {
+            width: 100%;
+            padding: 20px 25px;
+
+            .link-drop-down {
+              color: rgb(81, 81, 81) !important;
+              font-size: 15px;
+              width: 100;
+              display: block;
+              // background-color: black;
+
+              &:hover {
+                color: color.$Very-dark-grayis-hblue !important;
+              }
+            }
+          }
+        }
+
+        &:hover .contaner-ul-dropdown {
+          display: block;
+        }
+
         a {
           font-weight: 600;
           transition: 1s;
